<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RoadMate</string>
    <string name="hello_world">Coming Soon!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>

    <string name="useCount">1200 Uses</string>
    <string name="viewsCount">3655 Views</string>
    <string name="status">Solving traffic problem in Ghana by providing real time traffic update</string>
    <string name="profilName">Abideen Adelu</string>
    <string name="profilJob">Developer</string>
    <string name="profilAdress">Legon, Accra</string>
    <string name="follow">Follow</string>
    <string name="contact">CONTACT</string>
    <string name="featuredPhotos">Featured photos</string>
    <string name="loadMore">Load More</string>
    <string name="urStatus">Write somthing&#8230;</string>
    <string name="publicPrivacy">To Public</string>
    <string name="privatePrivacy">To Followers</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="job">Job</string>
    <string name="name">Full Name</string>
    <string name="address">Address</string>
    <string name="email">E-mail</string>
    <string name="passwordConfirm">Confirm Password</string>
    <string name="chooseAvatar">Choose Avatar</string>
    <string name="typeComment">Type a comment&#8230;</string>

    <item name="TAG_OBJECT" type="id"/>
    <item name="TAG_VIEW" type="id"/>
    <item name="TAG_LIKE_ACTION" type="id"/>
    <item name="TAG_FOLLOW_ACTION" type="id"/>

    <string-array name="list_options">
        <item>Traffic Updates</item>
        <item>Taxi Fare</item>
        <item>Report Traffics</item>
        <item>Report Accidents</item>
        <item>Road Safety Tips</item>
        <item>Nearby</item>
        <item>Help</item>
    </string-array>

    <array name="list_icons_selected">
        <item>@drawable/traffic_selected</item>
        <item>@drawable/test_selected</item>
        <item>@drawable/test_selected</item>
        <item>@drawable/test_selected</item>
        <item>@drawable/test_selected</item>
        <item>@drawable/test_selected</item>
        <item>@drawable/help_selected</item>
    </array>

    <string name="publish">Add New Post</string>
    <string name="settings">Settings</string>

    <string name="title_press">Press</string>
    <string name="info_press">read our press release</string>
    <string name="link_press">Press</string>

    <string name="title_contact_us">Contact us</string>
    <string name="info_contact_us">Contact us if you need any help</string>
    <string name="link_contact_us">Email</string>

    <string name="title_terms">Terms and Conditions</string>
    <string name="info_terms">read the terms and conditions</string>
    <string name="link_terms">Email</string>

    <string name="title_privacy">Privacy Policy</string>
    <string name="info_privacy">learn more about our privacy policy</string>
    <string name="link_privacy">Email</string>

    <string name="title_faq">FAQ</string>
    <string name="info_faq">answer to frequently asked questions</string>
    <string name="link_faq">Email</string>

    <string name="title_how_it_works">How it works?</string>
    <string name="info_how_it_works">more on how it works</string>
    <string name="link_how_it_works">Email</string>

    <string name="title_about_us">About Us</string>
    <string name="info_about_us">more about roadmate</string>
    <string name="link_about_us">Email</string>


    <string name="title_website">Website</string>
    <string name="info_website">Visit our website</string>
    <string name="title_google_plus">Google +</string>
    <string name="info_google_plus">Visit our page</string>
    <string name="title_facebook">Facebook</string>
    <string name="info_facebook">Visit our fanpage</string>
    <string name="title_rate_us">Rate me</string>
    <string name="info_rate_us">Rate me in Google Play Store</string>
    <string name="title_more_app">More apps</string>
    <string name="info_more_app">Feel fun with our applications</string>
    <string name="info_no_result">No Result Found</string>
    <string name="quit_message">Do you want to quit this application?</string>
    <string name="info_delete_favorites">Do you want to delete all bookmarked locations?</string>
    <string name="info_no_delete_favorites">No bookmarked location to delete!</string>
    <string name="title_warning_close">Exit</string>
    <string name="info_lose_internet">No internet connection.Please check again!</string>
    <string name="info_empty">Please enter the keyword!</string>
    <string name="info_close_app">Do you want to exit the application?</string>
    <string name="info_server_error">Unable to connect to server.Please try again!</string>
    <string name="info_parse_error">Unable to process data at the moment.Please try again!</string>
    <string name="dircache">/auctions</string>
    <string name="lru_dircache">auctions</string>
    <string name="info_login_facebook_error">Login facebook error!Try again</string>
    <string name="info_login_twitter_error">Login twitter error!Try again</string>

    <string name="info_version_format">Version %1$s</string>

    <string name="copyright">© 2015 RoadMate</string>

    <string name="loading">Loading...</string>
    <string name="title_yes">Yes</string>
    <string name="title_no">No</string>
    <string name="title_ok">OK</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_info">Information</string>
    <string name="title_my_location">My Location</string>
    <string name="title_unknown_location">Unknown Location</string>
    <string name="title_unknown_address">Unknown Address</string>
    <string name="title_confirm">Confirm</string>
    <string name="title_warning">Warning</string>
    <string name="title_share">Share</string>
    <string name="title_back">Back</string>
    <string name="title_images">Images</string>
    <string name="title_image">Image</string>
    <string name="title_custom_search">CUSTOM</string>
    <string name="title_all_place">All places in map</string>
    <string name="title_refresh">Refresh</string>
    <string name="title_settings">Settings</string>

    <string name="title_search">Search the location</string>
    <string name="title_quick_distance">Change radius</string>

    <string name="title_place_info">Place Information</string>
    <string name="title_user_reviews">User Reviews</string>

    <string name="format_reviews">%1$s Reviews</string>
    <string name="format_review">%1$s Review</string>

    <string name="format_radius">Radius: %1$s %2$s</string>
    <string name="format_address">Address: %1$s </string>
    <string name="format_area">Area: %1$s </string>
    <string name="format_lat">Latitude: %1$s </string>
    <string name="format_long">Longitude: %1$s </string>
    <string name="format_country">Country: %1$s </string>
    <string name="format_country_code">Country Code: %1$s </string>
    <string name="format_add_favorite">Add %1$s to bookmarked locations </string>
    <string name="format_remove_favorite">Remove %1$s to bookmarked locations </string>

    <string name="title_units">Distance (km or mi)</string>
    <string name="title_piority">Piority</string>
    <string name="title_travel_modes">Travel Modes</string>

    <string name="info_loading_more">Finding more locations aund you.Please wait...</string>

    <string name="title_improve_location">Improve your location</string>
    <string name="title_location_services_disable">GPS disabled</string>
    <string name="info_location_services_disable">Vicinity App requires access to your current location.Kindly turn on the GPS</string>

    <string name="title_enable">Enable</string>
    <string name="info_get_location_error">Error in getting location!Please try again later</string>
    <string name="info_gps_enable">Turn on the following to improve your location:GPS</string>
    <string name="info_process_find_location">Finding your location.Please wait...</string>
    <string name="info_format_process_find_location">Finding %1$s in your Vicinity </string>
    <string name="info_format_process_detail_location">Fetching information of %1$s </string>
    <string name="info_show_again">Don\'t show again</string>
    <string name="info_no_location">Can\'t not find locations surrounding you!</string>

    <string name="menu_location_terrain">Terrain View</string>
    <string name="menu_location_satellite">Satellite View</string>
    <string name="menu_location_traffic">Traffic View</string>
    <string name="menu_location_details">Location Details</string>

    <string name="tab_infomation">Information</string>
    <string name="tab_map">Map</string>

    <string-array name="metric_array">
        <item>Kilometers</item>
        <item>Miles</item>
    </string-array>

    <string-array name="sorting_array">
        <item>Distance</item>
        <item>Rating</item>
    </string-array>

    <string-array name="travel_mode_array">
        <item>Driving</item>
        <item>Walking</item>
    </string-array>

    <string name="title_distance">Distance</string>
    <string name="title_rating">Rating</string>
    <string name="format_distance">Distance: ~%1$s</string>

    <string name="title_get_directions">Get Directions</string>

    <string name="title_sort_by_distance">Sort by distance</string>
    <string name="title_sort_by_rating">Sort by rating</string>


    <string name="info_distance_km_format">~ %1$s km</string>
    <string name="info_distance_miles_format">~ %1$s mi</string>
    <string name ="format_start_address"><Data><![CDATA[<font color=\'#999999\'>From&nbsp;</font><font color=\'#000000\'>%1$s</font>]]></Data></string>
    <string name ="format_end_address"><Data><![CDATA[<font color=\'#999999\'>To&nbsp;</font><font color=\'#000000\'>%1$s</font>]]></Data></string>
    <string name ="format_duration_distance"><Data><![CDATA[<font color=\'#000000\'>%1$s&nbsp;</font><font color=\'#999999\'>(%2$s)</font>]]></Data></string>
    <string name ="format_sumary"><Data><![CDATA[<font color=\'#999999\'>Via %1$s</font>]]></Data></string>

</resources>
