<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal" >

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>


    <LinearLayout
        style="@style/registerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="100dp"
        android:layout_marginTop="10dp"
        tools:ignore="UselessParent" >



        <!--<ImageView-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/chooseAvatar"
            style="@style/logintBtn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:background="@drawable/bg_follow_button"
            android:text="@string/chooseAvatar" />

        <EditText
            android:id="@+id/username"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text" >
        </EditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@color/actionBar" />

        <EditText
            android:id="@+id/email"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" >
        </EditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@color/actionBar" />

        <EditText
            android:id="@+id/password"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" >
        </EditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@color/actionBar" />

        <EditText
            android:id="@+id/passwordConfirm"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordConfirm"
            android:inputType="textPassword" >
        </EditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@color/actionBar" />

        <Button
            android:id="@+id/registerBtn"
            style="@style/logintBtn"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_contact_button"
            android:text="@string/register" />



</LinearLayout>


</RelativeLayout>