<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/postBg"
    android:orientation="vertical"
    tools:ignore="ContentDescription" >

    <LinearLayout
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/postsItemMargin"
        android:background="@drawable/bg_post_item"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/postHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_post_item_header"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/postOwnerPicture"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:id="@+id/headerInfoContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/postsItemMargin" >

                <TextView
                    android:id="@+id/postOwnerName"
                    style="@style/postOwnerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/postPublishDate"
                    style="@style/postPublishDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E9E9E9" />

        <LinearLayout
            android:id="@+id/postBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/postImage"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:contentDescription="@string/hello_world"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/postStatus"
                style="@style/postStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E9E9E9" />

        <LinearLayout
            android:id="@+id/postFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/postActionAreaRight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white" >

                <ImageButton
                    android:id="@+id/likeBtn"
                    style="@style/actionAreaBtns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FF5722" />
                <!--android:background="@drawable/bg_like_button"-->

                <ImageButton
                    android:id="@+id/shareBtn"
                    style="@style/actionAreaBtns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sharethis" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white" >

                <ImageView
                    android:id="@+id/imageView1"
                    style="@style/actionAreaBtns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_likes" />

                <TextView
                    android:id="@+id/likesNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#B4B4B4" />

                <ImageView
                    android:id="@+id/imageView2"
                    style="@style/actionAreaBtns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_views" />

                <TextView
                    android:id="@+id/viewsNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#B4B4B4" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E9E9E9" />

        <LinearLayout
            android:id="@+id/addComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/commentInput"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/typeComment"
                android:inputType="text" />

            <ImageButton
                android:id="@+id/submitComment"
                style="@style/actionAreaBtns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_followers" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="#E9E9E9" />

        <LinearLayout
            android:id="@+id/commentsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/commentsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" >
            </ListView>
        </LinearLayout>
    </LinearLayout>

</ScrollView>